<resources>
    <string name="app_name">Glucomaster</string>
    <string name="LoginTitle" translatable="false">Login</string>
    <string name="contrasenya">Contraseña</string>
    <string name="email" translatable="false">Email</string>
    <string name="iniciarsesion">Iniciar sesión</string>
    <string name="reg1">¿Aún no estas registrado?</string>
    <string name="reglink"><u>Registrate</u></string>
    <string name="iniciarsesionconG">Iniciar sesión con Google</string>
    <string name="loginEnBlanco">Ni el email ni la contraseña pueden estar vacios</string>
    <string name="authOK">" logueado"</string>
    <string name="errorLog">Error de mail o de contraseña</string>
    <string name="default_web_client_id" translatable="false" />
    <string name="crearCuenta">Registro</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="btncrearCuenta">Crear cuenta</string>
    <string name="camposvacios">Ninguno de los campos puede estar vacio</string>
    <string name="passmenor6">La contraseña no puede tener menos de 6 caracteres</string>
    <string name="passnocoinciden">Las contraseñas no coinciden</string>
    <string name="correoenuso">Este correo ya esta en uso</string>
    <string name="ResetpassTitle">Reset contraseña</string>
    <string name="btnresetpass">Restablecer</string>
    <string name="resetOK">Se envió correo de reseteo de contraseña</string>
    <string name="resetKO">No se encontró la cuenta</string>
    <string name="resetempty">El email no puede estar vacio</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="cierresesion">Sesión cerrada correctamente</string>
    <string name="tituloPautaActual">PAUTA ACTUAL</string>
    <string name="desayuno">Desayuno</string>
    <string name="comida">Comida</string>
    <string name="cena">Cena</string>
    <string name="resopon">Resopon</string>
    <string name="titleActual">Actual</string>
    <string name="date">Fecha</string>
    <string name="medicacion">Medicación</string>
    <string name="margenes">Márgenes</string>
    <string name="turnoDesayuno">Desayuno</string>
    <string name="turnoComida">Comida</string>
    <string name="turnoCena">Cena</string>
    <string name="turnoResopon">Resopón</string>
    <string name="cambiar">Cambiar</string>
    <string name="nuevaPauta">Nueva pauta</string>
    <string name="fecha">Fecha</string>
    <string name="restricciones">Márgenes</string>
    <string name="anyadir">Añadir margen</string>
    <string name="limInf">lim inf</string>
    <string name="guion" translatable="false">-</string>
    <string name="dosis">dosis</string>
    <string name="mgl" translatable="false">mg/dl</string>
    <string name="U" translatable="false">U</string>
    <string name="anyadirpauta">Añadir pauta</string>
    <string name="Medicaciones">Medicaciones</string>
    <string name="nombreMed">Nueva medicación</string>
    <string name="anyadirMed">Añadir medicación</string>
    <string name="pautas">Pautas</string>
    <string name="turno">Turno</string>
    <string name="consejos">Consejos</string>
    <string name="consejo1">"\nSi tiene uno de los siguientes síntomas, temblor, palpitaciones, sudoración o visión borrosa y/o su glucemia esta por debajo de 60-70mg/dl:\n\n  - Tome hidratos de carbono de absorción rápida :\n + Un azucarillo, medio vaso de zumo o de refrescos azucarados..\n + Preparados en forma de gel que contienen 15 gramos de glucosa.\n\n  - Tras la ingesta de glucosa, se aconseja realizar una segunda medición a los 15 minutos que verifique su efecto:\n + Si ya está por encima de los 70 mg/dl,  tome un hidrato de carbono de absorción lenta:  como un pequeño bocadillo\n + Si, por el contrario, los niveles siguen por debajo de 70 mg/dl, es necesario tomar otros 15 gramos de azúcar rápido.\n\n  ---------------------------------------------------"</string>
    <string name="glucemia">Glucemia</string>
    <string name="introducirGluc">Valor</string>
    <string name="calcularDosis">Calcular dosis</string>
    <string name="dosis2">Dosis</string>
    <string name="resVacio">Ningún campo de la restriccion ni la fecha pueden estar vacios</string>
    <string name="anyadirFecha">Añadir fecha</string>
    <string name="fechaVacia">El campo fecha no puede estar vacio</string>
    <string name="fechaAnyadida">Fecha añadida con éxito</string>
    <string name="pautaAnyadida">Pauta añadida con éxito</string>
    <string name="sinMed">Añada medicaciones y la fecha antes de añadir la pauta</string>
    <string name="glucRegistrada">Glucemia guardada</string>
    <string name="añadaPauta">No hay pautas, añada una pauta</string>
    <string name="noMargen">Glucemia fuera de los margenes Consulte con su médico</string>
    <string name="confirmarBorradoTitulo">Confirmar borrado</string>
    <string name="confirmarBorrado">¿Estás seguro de querer borrar esta pauta?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="repetirContrasenya">Repetir contraseña</string>
    <string name="sinMargenes">Sin márgenes</string>
    <string name="reestablecerpass"><u>¿Olvidó su contraseña?</u></string>
    <string name="cuentacreada">Cuenta creada con éxito</string>
    <string name="medAnyadida">Medicación añadida</string>
    <string name="limSup">lim sup</string>
    <string name="medNoVacio">El campo de nueva medicación no puede estar vacio</string>
    <string name="sinMedicaciones">Sin medicaciones</string>
    <string name="valorVacio">Debe indicarse un valor de glucemia</string>
    <string name="noVaciaPau">No se puede  dejar la lista vacia</string>
</resources>