<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softblue"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/Theme.NoactionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Glucomaster"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/tvPautaActual"
        android:layout_width="320dp"
        android:layout_height="84dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        android:gravity="center"
        android:text="--/--/----"
        android:textColor="@color/hardblue"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvTitlePautaActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tituloPautaActual"
        android:textColor="@color/hardblue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btnDesayuno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:text="@string/desayuno"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPautaActual" />

    <Button
        android:id="@+id/btnComida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comida"
        android:textSize="40sp"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDesayuno" />

    <Button
        android:id="@+id/btnCena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cena"
        android:textSize="40sp"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComida" />

    <Button
        android:id="@+id/btnResopon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/resopon"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCena" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_regimen"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_regimen"
        app:layout_constraintStart_toStartOf="@+id/btn_add_regimen"
        app:layout_constraintTop_toTopOf="@+id/btn_add_regimen"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/baseline_add_24" />

    <Button
        android:id="@+id/btn_add_regimen"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_with_border"
        android:textColor="@color/hardblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResopon" />

    <Button
        android:id="@+id/btnAddMed"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_with_border"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_regimen"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResopon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddMed"
        app:layout_constraintEnd_toEndOf="@+id/btnAddMed"
        app:layout_constraintStart_toStartOf="@+id/btnAddMed"
        app:layout_constraintTop_toTopOf="@+id/btnAddMed"
        app:srcCompat="@drawable/syringe1" />


    <Button
        android:id="@+id/btnTips"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_with_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toEndOf="@+id/btn_add_regimen"
        app:layout_constraintTop_toBottomOf="@+id/btnResopon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTips"
        app:layout_constraintEnd_toEndOf="@+id/btnTips"
        app:layout_constraintStart_toStartOf="@+id/btnTips"
        app:layout_constraintTop_toTopOf="@+id/btnTips"
        app:srcCompat="@drawable/tips1" />

</androidx.constraintlayout.widget.ConstraintLayout>